# kode24-lonnsstatistikk

./: .gitignore  pyproject.toml
data/: kode24_lønn_2023_vår.csv
notebooks/: eda.ipynb
